# PortSage

./: CLAUDE.md  Cargo.toml  README.md  flake.nix  result
src/: bindings.rs  cli.rs  filter.rs  lib.rs  main.rs  port.rs  process.rs  tui.rs
src/tui/: clipboard.rs  detail.rs  filter.rs  mod.rs  render.rs  state.rs  view.rs
tests/: cli_test.rs  filter_test.rs  port_test.rs  process_test.rs
