[package]
name = "portsage"
version = "0.1.0"
edition = "2021"
description = "A TUI tool to monitor processes and their listening ports"
license = "MIT"
repository = "https://github.com/mei28/PortSage"
readme = "README.md"
keywords = ["tui", "process", "port", "monitor"]
categories = ["command-line-utilities"]

[dependencies]
clap = {version = "4.5", features = ["derive"]}
sysinfo = { version = "0.29" }
tabled = "0.15"
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
arboard = "3"
nix = { version = "0.27", features = ["signal", "process"] }
